--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.2",
   "description": "Boilerplate",
   "main": "index.js",
+  "node": "14.15.10",
   "scripts": {
     "docker-start-dev": "docker-compose -f \"docker\\DEV.docker-compose.yml\" up",
     "docker-stop-dev": "docker-compose -f \"docker\\DEV.docker-compose.yml\" down",
